kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-swapp
  namespace: mixed-demo
  labels:
    app: simple-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
      - name: web-app
        image: benjcady14/mixed_demo:0.0.1
        ports:
        - containerPort: 24224
        imagePullPolicy: Always
