kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-service
  namespace: mixed-demo
  labels:
    app: simple-web-app
spec:
  selector:
    app: simple-web-app
  ports: 
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
